name:                elastic-stress
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/andrewthad/elastic-stress#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2017 Andrew Martin
category:            software
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable elastic-stress
  hs-source-dirs:      app
  main-is:             
    Main.hs
  other-modules:
    StreamLines
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , streaming
    , streaming-bytestring
    , optparse-applicative
    , bytestring
    , fast-logger
    , stm-chans
    , http-client
    , http-types
    , threads
    , stm
    , transformers
    , errors
    , aeson
    , text
    , containers
    , clock
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/elastic-stress

